# phenomate-core

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  pyrightconfig.json
docs/source/: conf.py  index.rst  modules.rst  phenomate_core.preprocessing.hyperspec.rst  phenomate_core.preprocessing.jai.rst  phenomate_core.preprocessing.lidar.rst  phenomate_core.preprocessing.oak_d.rst  phenomate_core.preprocessing.rst  phenomate_core.rst
phenomate_core/: __init__.py  get_logging.py  get_version.py
phenomate_core/preprocessing/: base.py
phenomate_core/preprocessing/capturesoftware/: process.py
phenomate_core/preprocessing/hyperspec/: process.py
phenomate_core/preprocessing/imu/: process.py
phenomate_core/preprocessing/jai/: process.py
phenomate_core/preprocessing/lidar/: process.py  reading_proto_buff.py
phenomate_core/preprocessing/lidar2d/: process.py
phenomate_core/preprocessing/lidar3douster/: process.py
phenomate_core/preprocessing/oak_d/: process.py
phenomate_core/preprocessing/septentrio/: process.py
src/: __init__.py
src/preprocessing/: base.py
src/preprocessing/hyperspec/: hyperspec.proto  hyperspec_pb2.py  process.py
src/preprocessing/jai/: jai_pb2.py  process.py
src/preprocessing/lidar/: lidar.proto  lidar_pb2.py
src/preprocessing/oak_d/: linalg.proto  oak_pb2.py  process.py  types.py
tests/: test_jai.py
