[project]
name = "phenomate-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "protobuf>=6.31.1",
    "pyturbojpeg",
    "spectral>=0.24",
]

[tool.uv.sources]
pyturbojpeg = { git = "https://github.com/lilohuang/PyTurboJPEG.git" }
